modules/gdscript/tests/scripts/Traits/analyzer/errors/class_trait_extends_mismatch .gd
trait SomeTrait extends Node:
	pass

class SomeClass extends Object:
	uses SomeTrait

func test() -> void:
	print("ok")
